# servmantui

./: Cargo.toml  docker-compose.yml
migrations/2024-05-15-114121_create_services/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
