[package]
name = "rata"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version = "2.1.6", features = ["postgres"]}
postgresql = "0.1.1"
dotenvy = "0.15"
serde_json = "1.0.117"
utoipa = { version = "4.2.3", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket"] }
utoipa-redoc = { version = "4.0.0", features = ["rocket"] }
utoipa-rapidoc = { version = "4.0.0", features = ["rocket"] }
utoipa-scalar = { version = "0.1.0", features = ["rocket"] }
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
